# brxon46

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  crowdin.yml  package.json  surfer.json
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: brxon-test-build.yml  build.yml  issue-metrics.yml  macos-release-build.yml  macos-universal-release-build.yml  sync-upstream.yml  twilight-release-schedule.yml  windows-profile-build.yml
.github/workflows/src/: generate_release_notes.sh
.well-known/: funding-manifest-urls
configs/common/: mozconfig
configs/linux/: mozconfig
configs/macos/: mozconfig
configs/windows/: mozconfig
docs/: contribute.md
prefs/firefox/: ai.yaml
prefs/zen/: compact-mode.yaml  mods.yaml  sync.yaml  view.yaml  workspaces.yaml  zen.yaml
scripts/: prepare-flatpak-release.py
src/docshell/base/: nsAboutRedirector-cpp.patch
src/external-patches/: manifest.json
src/external-patches/firefox/: brxon.patch
src/netwerk/base/: ThreatBlocker.cpp  ThreatBlocker.h
src/netwerk/brxon/: Cargo.toml  bloom.rs  build_filter.rs  cbindgen.toml  delta.rs  initial_filter.rs  lib.rs  moz.build  policy.rs  signing.rs  state.rs  transport.rs
src/zen/: moz.build  zen.globals.mjs
src/zen/@types/: index.d.ts
src/zen/common/: ZenPreloadedScripts.js  zen-sets.js
src/zen/compact-mode/: sidebar.inc.css
src/zen/drag-and-drop/: ZenDragAndDrop.js
src/zen/folders/: ZenFolder.mjs  ZenFolders.mjs
src/zen/glance/: ZenGlanceManager.mjs
src/zen/sessionstore/: ZenSessionManager.sys.mjs
src/zen/sync/: moz.build  (+2 more)
(+36 files in other folders)
