[package]
name    = "brxon"
version = "0.1.0"
edition = "2021"

[lib]
name       = "brxon"
path       = "lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# ── تشفير وتوقيع ──────────────────────────────────────
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2          = "0.10"
hex           = "0.4"

# ── شبكة ──────────────────────────────────────────────
reqwest = { version = "0.11", features = ["gzip", "stream", "rustls-tls", "json"], default-features = false }
tokio        = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures      = "0.3"

# ── تسلسل ─────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bincode    = "1.3"

# ── Bloom Filter ───────────────────────────────────────
murmur3 = "0.5"
base64 = "0.21"

# ── أخطاء + logs ──────────────────────────────────────
thiserror          = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── مزامنة ────────────────────────────────────────────
parking_lot = "0.12"
mozilla-central-workspace-hack = { version = "0.1", features = ["brxon"], optional = true }

